--- a/web.config
+++ b/web.config
@@ -19,4 +19,7 @@
     </defaultDocument>
     
   </system.webServer>
+  <system.web>
+        <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm"/>
+    </system.web>
 </configuration>
