--- a/web.config
+++ b/web.config
@@ -20,6 +20,6 @@
     
   </system.webServer>
   <system.web>
-        <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm"/>
+        <customErrors mode="Off"/>
     </system.web>
 </configuration>
